--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
 <!doctype html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Green Genius</title>
-    <script id="ruttl-site-embed-script" src="https://app.ruttl.com/plugin.js?id=0vtTspQ20tDINw972XDc&e=1" defer async></script>
-</head>
-
-<body>
+    <title>Vite + React + TS</title>
+  </head>
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-</body>
-
+  </body>
 </html>
